--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,17 +39,17 @@ const benefits = [
 const services = [
   {
     title: "Applications Tailored to Improve Your Workflow",
-    image: "https://argonaute-digital-front-ky5z.vercel.app/images/assets/blue.png",
+    image: "https://argonaute-digital.com/images/assets/blue.png",
     body: "Discover custom applications designed to enhance your workflow. At Argonaute Digital, we specialize in crafting bespoke solutions that align perfectly with your business needs. From streamlining processes to boosting efficiency, our applications are made to measure, ensuring a seamless integration into your daily operations.",
   },
   {
     title: "Solve Your Business Challenges with Software",
-    image: "https://argonaute-digital-front-ky5z.vercel.app/images/assets/violet.png",
+    image: "https://argonaute-digital.com/images/assets/violet.png",
     body: "Navigate the complexities of your business challenges with our powerful software solutions. Argonaute Digital is dedicated to providing innovative answers to your unique problems. Our tailored software solutions are crafted to address your specific pain points, enabling you to overcome obstacles and drive success in your industry.",
   },
   {
     title: "Build Custom Websites and Web Apps",
-    image: "https://argonaute-digital-front-ky5z.vercel.app/images/assets/pink.png",
+    image: "https://argonaute-digital.com/images/assets/pink.png",
     body: " Transform your online presence with custom websites and web applications. Argonaute Digital is your partner in building digital experiences that stand out. Whether you need a captivating website or a dynamic web application, our team combines creativity and technical expertise to bring your vision to life. Elevate your brand and engage your audience with our custom web solutions.",
   },
 ];
@@ -176,9 +176,9 @@ const services = [
       <Card>
       <div class="flex justify-around">
  
-        <img src="https://argonaute-digital-front-ky5z.vercel.app/images/assets/robotlogo blue.svg" width="256px"  alt="logo">
-        <img src="https://argonaute-digital-front-ky5z.vercel.app/images/assets/robotlogo pink.svg" width="256px"  alt="logo">
-        <img src="https://argonaute-digital-front-ky5z.vercel.app/images/assets/robotlogo yellow.svg" width="256px"  alt="logo">
+        <img src="https://argonaute-digital.com/images/assets/robotlogo blue.svg" width="256px"  alt="logo">
+        <img src="https://argonaute-digital.com/images/assets/robotlogo pink.svg" width="256px"  alt="logo">
+        <img src="https://argonaute-digital.com/images/assets/robotlogo yellow.svg" width="256px"  alt="logo">
       </div>
       </Card>
     </section>
