--- a/src/components/test component/Swiper.astro
+++ b/src/components/test component/Swiper.astro
@@ -2,38 +2,38 @@
 // src/pages/swiper.astro
 import { Card, Pill } from "@eliancodes/brutal-ui";
 
-import caroussel from "https://argonaute-digital-front-ky5z.vercel.app/images/styles/caroussel.scss";
+import caroussel from "https://argonaute-digital.com/images/styles/caroussel.scss";
 const clients = [
   {
     name: "Claire Le Marechal",
     url: "https://www.clairelemarechal.com/",
 
-    image: "https://argonaute-digital-front-ky5z.vercel.app/images/assets/Claire.png",
+    image: "https://argonaute-digital.com/images/assets/Claire.png",
   },
   {
     name: "French school",
     url: "https://cfkairouan.com/",
-    image: "https://argonaute-digital-front-ky5z.vercel.app/images/assets/kairouan.png",
+    image: "https://argonaute-digital.com/images/assets/kairouan.png",
   },
   {
     name: "Otos-lab, agency",
     url: "https://www.otos-lab.fr/",
-    image: "https://argonaute-digital-front-ky5z.vercel.app/images/assets/otos.png",
+    image: "https://argonaute-digital.com/images/assets/otos.png",
   },
   {
     name: "Siera Paris",
     url: "https://siera.paris/",
-    image: "https://argonaute-digital-front-ky5z.vercel.app/images/assets/bijouxvintage.png",
+    image: "https://argonaute-digital.com/images/assets/bijouxvintage.png",
   },
   {
     name: "Price and Go",
     url: "#",
-    image: "https://argonaute-digital-front-ky5z.vercel.app/images/assets/Dashboards.png",
+    image: "https://argonaute-digital.com/images/assets/Dashboards.png",
   },
   {
     name: "Content creator AI",
     url: "",
-    image: "https://argonaute-digital-front-ky5z.vercel.app/images/assets/contentai.jpg",
+    image: "https://argonaute-digital.com/images/assets/contentai.jpg",
   }
   
 ];
