--- a/src/components/layout/BaseNavigation.astro
+++ b/src/components/layout/BaseNavigation.astro
@@ -5,7 +5,11 @@ interface Props {
 
 const navigationItems = [
   { name: 'Home', url: '/' },
+  { name:'Services', url: '/services/' },
   { name: 'About', url: '/about/' },
+
+
+  
   { name: 'Blog', url: '/blogs/' },
   { name: 'Contact', url: '/contact/' },
 ];
