--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,13 +57,13 @@ const services = [
 
 <Layout
   title="Home"
-  pageTitle="Brutal Theme | Home"
-  description="Brutal is a minimalistic, neobrutalism theme for Astro."
+  pageTitle="Argonaute Dgital | Home"
+  description="Empowering businesses with cutting-edge software solutions."
 >
   <main class="p-6">
     <MobileSocials />
     <section id="about" class="grid md:grid-cols-8 gap-8 mt-4">
-      <h2 class="hidden">Argonaute Digital</h2>
+      <h1 class="hidden">Argonaute Digital</h1>
       <div class="col-span-6">
         <Card>
           <div class="flex flex-col justify-between items-start gap-4">
@@ -147,17 +147,20 @@ const services = [
         </div>
       </Card>
     </section>
-    <section>
-      <div class="bg-white my-24 p-16 card-shadow">
+    <section class="mt-8">
+      <Card color="white ">
 
-        <h2 class="text-2xl text-center md:text-4xl lg:text-6xl mb-8 dm-serif">
-          Let's turn your ideas into impactful solutions. Contact us now, and let's craft the future of your online success together
-        </h2>
-        <div class="flex items-center justify-center ">
-
-          <Button target={"_self"} href="/contact/" >Get in touch &rarr;</Button>
-        </div>
-      </div>
+ 
+  
+          <h2 class="text-2xl text-center md:text-4xl lg:text-6xl mb-8 dm-serif">
+            Let's turn your ideas into impactful solutions. Contact us now, and let's craft the future of your online success together
+          </h2>
+          <div class="flex items-center justify-center ">
+  
+            <Button target={"_self"} href="/contact/" >Get in touch &rarr;</Button>
+          </div>
+   
+      </Card>
       
 
  
