--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -1,5 +1,6 @@
 ---
-import { Button, Card } from "@eliancodes/brutal-ui";
+import { Button } from "@eliancodes/brutal-ui";
+import Card from "../../components/original components/Card.astro";
 import Layout from "../../layouts/Default.astro";
 import SwiperApi from "../../components/test component/SwiperApi.astro";
 ---
